<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Flunch</string>
	<string name="critizr_api_key">0413daa3bc6c85d5ad4295ed4e5ba4b9</string>
	<string name="external_place_id">107</string>
	<string name="click_here">Cliquer ici</string>
	<string name="click_here_to_see_your_store">Accéder à votre page Restaurant</string>
	<string name="send_a_feedback">Envoyer une remarque</string>
	<string name="welcome_to_bolibio_france">Bienvenue chez Flunch France</string>
	<string name="bolibio_valencienne">Flunch Gare Lille</string>
    <string name="opening_hours">12h-22h</string>
    <string name="opening_days">Ouvert du lundi au Dimanche</string>
	<string name="contact_director">Contacter le gérant</string>
    <string name="contact_another_director">Pour contacter le gérant d\'un autre restaurant :</string>
</resources>