<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="50dp"
	    android:layout_margin="10dp"
	    android:layout_alignParentBottom="true"
	    android:orientation="horizontal"
	    android:weightSum="100">
	    
	    <TextView
	        android:id="@+id/storlocator_tv"
	        android:layout_height="fill_parent"
	        android:layout_width="0dp"
	        android:layout_weight="60"
	        android:textColor="@color/text_color"
	        android:gravity="center_vertical"
	        android:text="@string/contact_another_director"
	        android:textSize="15sp" />
	      
	    <Button  
	        android:id="@+id/storelocator_btn"
	        android:layout_height="fill_parent"
	        android:layout_width="0dp"
	        android:layout_weight="40"
	        android:onClick="MyStoreClickMethod"
	        android:textColor="@color/white_color"
	        android:background="@color/button_color"
	        android:gravity="center"
	        android:layout_gravity="center_vertical"
	        android:text="@string/click_here" />
	    
	</LinearLayout>

	<RelativeLayout
       android:layout_width="fill_parent"
       android:layout_height="fill_parent">

        <TextView
			android:layout_marginLeft="8dp"
           android:id="@+id/my_store_opening_days"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColor="@color/text_color"
           android:layout_below="@+id/my_store_name"
           android:textSize="15sp"
           android:text="@string/opening_days" />

         <TextView
			 android:layout_marginLeft="8dp"
           android:id="@+id/my_store_opening_hours"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColor="@color/text_color"
           android:layout_below="@+id/my_store_opening_days"
           android:textSize="15sp"
           android:text="@string/opening_hours" />
        <TextView
			android:layout_marginLeft="8dp"
            android:id="@+id/my_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:layout_below="@+id/my_store_opening_hours"
            android:textSize="15sp" />

        <Button
           android:id="@+id/my_store_btn"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_below="@+id/my_store_opening_hours"
           android:onClick="MyStoreClickMethod"
           android:textColor="@color/white_color"
           android:background="@color/button_color"
           android:layout_marginTop="50dp"
           android:text="@string/contact_director" />

        <TextView
			android:layout_marginLeft="8dp"
			android:layout_marginTop="8dp"
            android:id="@+id/my_store_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/bolibio_valencienne"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</RelativeLayout>
